--- a/bot/package.json
+++ b/bot/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "node-fetch": "^2.1.2",
     "symphony-api-client-node": "^0.1.0"
   }
 }
